--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   "main": "dist/cjs/react-converse.js",
   "jsnext:main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
-  "files": ["index.js", "graph.js", "index.d.ts", "graph.d.ts", "dist/"],
+  "files": [
+    "index.js",
+    "graph.js",
+    "index.d.ts",
+    "graph.d.ts",
+    "dist/"
+  ],
   "keywords": [
     "react",
     "bot",
@@ -25,10 +31,8 @@
     "build:cjs": "webpack",
     "build:styleguide": "styleguidist build",
     "prebuild": "rimraf dist/ styleguide/",
-    "build":
-      "cross-env NODE_ENV=production npm run build:esm && npm run build:cjs && npm run build:styleguide",
-    "test":
-      "cross-env NODE_ENV=test npm run eslint && npm run flow && npm run jest",
+    "build": "cross-env NODE_ENV=production npm run build:esm && npm run build:cjs && npm run build:styleguide",
+    "test": "cross-env NODE_ENV=test npm run eslint && npm run flow && npm run jest",
     "eslint": "eslint src/ docs/",
     "jest": "jest --no-cache",
     "flow": "flow src/",
@@ -46,7 +50,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-root-import": "^5.1.0",
+    "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -55,28 +59,29 @@
     "cross-env": "^5.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.17.0",
+    "eslint": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-unobtrusive": "^1.2.1",
     "eslint-plugin-flowtype": "^2.43.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
-    "flow-bin": "^0.69.0",
+    "flow-bin": "^0.75.0",
     "gh-pages-travis": "^1.0.4",
     "html-webpack-plugin": "^3.0.0",
     "html-webpack-react-root-plugin": "^0.9.0",
     "husky": "^0.14.3",
-    "jest": "^22.2.2",
+    "jest": "^23.1.0",
     "lint-staged": "^7.0.0",
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-styleguidist": "^6.2.3",
+    "react-styleguidist": "^7.0.18",
     "rimraf": "^2.6.2",
     "styled-components": "^3.1.6",
-    "webpack": "^3.11.0"
+    "webpack": "^4.12.1",
+    "webpack-cli": "^3.0.8"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
@@ -84,7 +89,9 @@
   },
   "browserslist": "last 2 versions, ie 10",
   "babel": {
-    "presets": ["./.babel"]
+    "presets": [
+      "./.babel"
+    ]
   },
   "eslintConfig": {
     "parser": "babel-eslint",
@@ -104,15 +111,25 @@
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "proseWrap": "always"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./.jest.js",
     "collectCoverage": true,
-    "collectCoverageFrom": ["src/**/*.js"]
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ]
   },
   "lint-staged": {
-    "*.js": ["prettier --parser flow --write", "eslint", "git add"],
-    "*.{json,md}": ["prettier --write", "git add"]
+    "*.js": [
+      "prettier --parser flow --write",
+      "eslint",
+      "git add"
+    ],
+    "*.{json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
