--- a/package.json
+++ b/package.json
@@ -34,18 +34,19 @@
     "build": "cross-env NODE_ENV=production npm run build:esm && npm run build:cjs && npm run build:styleguide",
     "test": "cross-env NODE_ENV=test npm run eslint && npm run flow && npm run jest",
     "eslint": "eslint src/ docs/",
-    "jest": "jest --no-cache",
+    "jest": "jest",
     "flow": "flow src/",
     "coverage": "cat coverage/lcov.info | coveralls",
     "styleguide": "styleguidist server",
     "deploy": "gh-pages-travis"
   },
   "dependencies": {
+    "create-react-context": "^0.2.2",
     "hoist-non-react-statics": "^2.3.1",
     "invariant": "^2.2.2"
   },
   "devDependencies": {
-    "@types/react": "^16.0.37",
+    "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.4",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -55,32 +56,32 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "coveralls": "^3.0.0",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^5.0.0",
+    "eslint": "^5.0.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-unobtrusive": "^1.2.1",
     "eslint-plugin-flowtype": "^2.43.0",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react": "^7.10.0",
     "flow-bin": "^0.75.0",
     "gh-pages-travis": "^1.0.4",
     "html-webpack-plugin": "^3.0.0",
     "html-webpack-react-root-plugin": "^0.9.0",
     "husky": "^0.14.3",
-    "jest": "^23.1.0",
+    "jest": "^23.2.0",
     "lint-staged": "^7.0.0",
-    "prettier": "^1.10.2",
+    "prettier": "^1.13.7",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-styleguidist": "^7.0.18",
+    "react-styleguidist": "^7.0.20",
     "rimraf": "^2.6.2",
     "styled-components": "^3.1.6",
-    "webpack": "^4.12.1",
+    "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8"
   },
   "peerDependencies": {
